--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,7 +1,14 @@
+@import url("./variables.css");
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     border: 0;
     text-decoration: none;
+}
+
+header, main, footer{
+    max-width: var(--max-width);
+    margin: auto;
 }
