Definindo esquema de cores e aplicação do mesmo no background e escrita do body

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -8,6 +8,11 @@
     text-decoration: none;
 }
 
+body{
+    color: var(--color-main);
+    background-color: var(--color-secondary);
+}
+
 header, main, footer{
     max-width: var(--max-width);
     margin: auto;
