--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,1 +1,9 @@
 @import url("./reset.css");
+
+.banner{
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)),
+        url("../images/banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+}
