--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -14,3 +14,19 @@
     margin: auto;
     text-align: center;
 }
+
+.banner .logo{
+    background-color: rgba(0, 0, 0, .2);
+    width: 260px;
+    height: 260px;
+    padding: 16px;
+    margin: auto auto 16px;
+    border-radius: 50%;
+}
+
+.banner .logo img{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: contain;
+}
