Definindo a família de fonte do documento

--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap');
 @import url("./variables.css");
 
 *{
@@ -6,6 +7,7 @@
     box-sizing: border-box;
     border: 0;
     text-decoration: none;
+    font-family: 'Raleway', sans-serif;
 }
 
 body{
