Estilizando o título h1 da página

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -30,3 +30,14 @@
     margin: auto;
     object-fit: contain;
 }
+
+.banner h1{
+    background-image: linear-gradient(var(--color-highlight), #1472B7);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 2.5rem;
+}
