--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -46,3 +46,26 @@
     font-size: 1.25rem;
     margin: 16px 0 24px;
 }
+
+.banner button{
+    color: var(--color-highlight);
+    background-color: transparent;
+    border: 2px solid;
+    border-image-source: linear-gradient(#3BA1CD, #1572B7);
+    border-image-slice: 10;
+    padding: 16px 32px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+    letter-spacing: 4px;
+}
+
+.banner button, .banner button:hover{
+    transition: .7s;
+}
+
+.banner button:hover{
+    background-color: var(--color-highlight);
+    color: var(--color-main);
+    cursor: pointer;
+}
