--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     height: 600px;
     padding-top: 60px;
+    border-bottom: 1px solid rgba(51, 168, 219, 0.502);
 }
 
 .banner-content{
