--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     border: 0;
     text-decoration: none;
+    text-align: center;
     font-family: 'Raleway', sans-serif;
 }
 
