--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -70,6 +70,14 @@
     cursor: pointer;
 }
 
+main h2{
+    color: var(--color-highlight);
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: 4px;
+    margin-bottom: 24px;
+}
+
 #course-content{
     width: 800px;
     margin: 100px auto;
