--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -101,6 +101,16 @@ main h2{
     box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
 }
 
+#course-content .module, #course-content .module:hover{
+    transition: .7s;
+}
+
+#course-content .module:hover{
+    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7),
+        0 0 15px rgba(255, 255, 255, .5);
+    cursor: pointer;
+}
+
 #course-content .module span{
     color: var(--color-highlight);
 }
