--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -142,3 +142,18 @@ main h2{
 #professional-challenges img{
     margin: 32px 0;
 }
+
+footer{
+    background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
+    border-top: 1px solid rgba(51, 168, 219, 0.502);
+    padding: 60px 0;
+}
+
+footer .dio-logo{
+    width: 300px;
+}
+
+footer a{
+    color: var(--color-highlight);
+    font-weight: 700;
+}
