Organizando o esquema de cores

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,13 +1,13 @@
 @import url("./reset.css");
 
 .banner{
-    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)),
+    background-image: linear-gradient(var(--color-black-060), var(--color-blue-6), var(--color-black-060)),
         url("../images/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
     padding-top: 60px;
-    border-bottom: 1px solid rgba(51, 168, 219, 0.502);
+    border-bottom: 1px solid var(--color-blue-4-050);
 }
 
 .banner-content{
@@ -16,7 +16,7 @@
 }
 
 .banner .logo{
-    background-color: rgba(0, 0, 0, .2);
+    background-color: var(--color-black-020);
     width: 260px;
     height: 260px;
     padding: 16px;
@@ -32,7 +32,7 @@
 }
 
 .banner h1{
-    background-image: linear-gradient(var(--color-highlight), #1472B7);
+    background-image: linear-gradient(var(--color-blue-4-100), var(--color-blue-1));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -48,10 +48,10 @@
 }
 
 .banner button{
-    color: var(--color-highlight);
+    color: var(--color-blue-4-100);
     background-color: transparent;
     border: 2px solid;
-    border-image-source: linear-gradient(#3BA1CD, #1572B7);
+    border-image-source: linear-gradient(var(--color-blue-3), var(--color-blue-2));
     border-image-slice: 10;
     padding: 16px 32px;
     text-transform: uppercase;
@@ -65,8 +65,8 @@
 }
 
 .banner button:hover{
-    background-color: var(--color-highlight);
-    color: var(--color-main);
+    background-color: var(--color-blue-4-100);
+    color: var(--color-white-100);
     cursor: pointer;
 }
 
@@ -75,7 +75,7 @@ main section{
 }
 
 main h2{
-    color: var(--color-highlight);
+    color: var(--color-blue-4-100);
     text-transform: uppercase;
     font-size: 2rem;
     letter-spacing: 4px;
@@ -91,14 +91,14 @@ main h2{
 }
 
 #course-content .module{
-    color: var(--color-main);
-    background-color: #252525;
+    color: var(--color-white-100);
+    background-color: var(--color-gray);
     width: 530px;
     padding: 16px;
     margin: 0 auto 24px;
-    border: 1px solid var(--color-highlight);
+    border: 1px solid var(--color-blue-4-100);
     border-radius: 100px;
-    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
+    box-shadow: inset -5px 6px 8px var(--color-black-070);
 }
 
 #course-content .module, #course-content .module:hover{
@@ -106,13 +106,13 @@ main h2{
 }
 
 #course-content .module:hover{
-    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7),
-        0 0 15px rgba(255, 255, 255, .5);
+    box-shadow: inset -5px 6px 8px var(--color-black-070),
+        0 0 15px var(--color-white-050);
     cursor: pointer;
 }
 
 #course-content .module span{
-    color: var(--color-highlight);
+    color: var(--color-blue-4-100);
 }
 
 #transform-world{
@@ -123,7 +123,7 @@ main h2{
     padding: 200px;
     border-width: 1px 0;
     border-style: solid;
-    border-color: rgba(51, 168, 219, 0.502);
+    border-color: var(--color-blue-4-050);
 }
 
 #transform-world p{
@@ -131,7 +131,7 @@ main h2{
     font-weight: 900;
     text-transform: lowercase;
     text-align: left;
-    text-shadow: 3px 2px var(--color-highlight);
+    text-shadow: 3px 2px var(--color-blue-4-100);
     max-width: 250px;
 }
 
@@ -144,8 +144,8 @@ main h2{
 }
 
 footer{
-    background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
-    border-top: 1px solid rgba(51, 168, 219, 0.502);
+    background-image: linear-gradient(var(--color-blue-5-000), var(--color-blue-5-020));
+    border-top: 1px solid var(--color-blue-4-050);
     padding: 60px 0;
 }
 
@@ -154,6 +154,6 @@ footer .dio-logo{
 }
 
 footer a{
-    color: var(--color-highlight);
+    color: var(--color-blue-4-100);
     font-weight: 700;
 }
